--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -10,13 +10,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Great+Vibes&family=Offside&family=Open+Sans:wght@300;400;500;600;700;800&family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto+Mono:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Baloo+Paaji|Open+Sans:300,300i,400,400i,600,600i,700,700i");
 
-
-
-
-
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 500;
-  font-family: 'Baloo Paaji', cursive;
+  font-family: "Baloo Paaji", cursive;
 }
 
 p {
@@ -24,15 +25,13 @@ p {
   font-weight: 400;
   opacity: 1;
   color: #333333;
-  letter-spacing: .6px;
-
-
+  letter-spacing: 0.6px;
 }
 /* Ripple Effect */
 body {
-  background: #FFFFFF;
+  background: #ffffff;
   margin: 0;
-  transition: .25s ease-in-out;
+  transition: 0.25s ease-in-out;
 }
 /*Ripple*/
 .ripple {
@@ -59,8 +58,6 @@ body {
   }
 }
 /* Ripple Effect END-----------------*/
-
-
 
 /* Replesment CSS  */
 img {
@@ -208,20 +205,18 @@ img {
   cursor: pointer;
   padding: 15px;
   border-radius: 100%;
-  box-shadow: 0px 0px 17px 10px rgb(180, 178, 178) ;
+  box-shadow: 0px 0px 17px 10px rgb(180, 178, 178);
   /* border: 1px solid rgba(143, 144, 145, 0.837); */
   /* transition: all 0.3s ease; */
 }
-#myBtn .ti-angle-double-up{
+#myBtn .ti-angle-double-up {
   color: rgb(0, 0, 0);
   background-color: transparent;
   font-size: 20px;
   border-radius: 100%;
 }
 
-
 #myBtn:hover {
-
   background-color: #07d6ffda;
   border: 2px solid rgb(255, 255, 255);
   color: rgb(255, 253, 253);
@@ -238,8 +233,6 @@ img {
   font-size: calc(20px + (35 - 20) * ((100vw - 300px) / (1300 - 300)));
 }
 
-
-
 /* blog wrapper */
 .blog-card {
   display: -webkit-box;
@@ -254,7 +247,6 @@ img {
   transition: all 0.3s ease;
 
   /* background-color: #827c7c; */
-
 }
 /* .blog-card:hover{
   box-shadow: 0px 0px 30px -10px rgb(154, 152, 152);
@@ -262,7 +254,7 @@ img {
 } */
 .blog-card:hover {
   background: var(--white-color);
-  box-shadow: 0 1rem 3rem rgba(0,0,0,.175);
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
   border-color: transparent;
   transform: translateY(-3px);
 }
@@ -272,8 +264,6 @@ img {
   /* background-color: #111; */
   text-align: center;
   padding-top: 70px;
-
-
 }
 
 .blog-card-img {
@@ -281,7 +271,7 @@ img {
   width: 70%;
   height: 70%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .blog-card-body {
@@ -307,7 +297,7 @@ img {
   text-decoration: none;
   display: inline-block;
   font-weight: 600;
-  opacity: .7;
+  opacity: 0.7;
   font-size: 13px;
 }
 
@@ -334,8 +324,8 @@ img {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
   .blog-card .blog-card-header {
     width: 80%;
@@ -358,8 +348,7 @@ img {
 }
 
 .testimonial-card-img-holder {
-  min-width: 45px;
-  max-width: 45px;
+  min-width: 81px;
   z-index: 999;
 }
 
@@ -393,7 +382,6 @@ img {
   font-size: calc(14px + (18 - 14) * ((100vw - 300px) / (1300 - 300)));
 }
 
-
 /*=========== Footer CSS ===========*/
 
 .footer-section {
@@ -421,7 +409,7 @@ img {
 }
 
 .footer-section span {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 14px;
   line-height: 1.6;
   color: #6e6e6e;
@@ -457,45 +445,8 @@ img {
   margin-left: auto; /* Push the icons to the right */
 }
 
-
-
 .footer-section .socail-icon a:last-child {
   margin-right: 0;
 }
 
-
-
-
 /* ----------------------------------------------------------- */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
