--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -70,7 +70,7 @@ img {
   margin: 0;
   padding: 0;
   height: 80px;
-  background-color: red;
+  background-color: #fffffff9;
   box-shadow: none;
 }
 
