--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,8 @@
 /* Ripple Effect */
 body {
   background: #FFFFFF;
+  /* background-color: var(--bg); */
+
   margin: 0;
   transition: .25s ease-in-out;
 }
@@ -159,6 +161,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100vh;
   background-image: url(./../images/Home_background.png);
+
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -314,6 +317,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 100%;
   box-shadow: 0px 0px 17px 10px rgb(180, 178, 178);
   transition: background-color 0.3s ease;
+  transition: transform 0.5s ease;
 }
 
 #myBtn .ti-angle-double-up {
@@ -732,7 +736,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 /* ============== contact-section ================  */
 .contact-section {
-  padding: 10px 0 350px 0;
+  padding: 10px 0 50px 0;
   text-align: center;
   background-color: #ececec59;
 }
@@ -780,6 +784,15 @@ h1, h2, h3, h4, h5, h6 {
   background: #ff000038;
   width: 100%;
 }
+
+/* --------------Time Section--------------------- */
+
+.time-section {
+  text-align: right;
+  padding: 20px 30px 0px 0px;
+}
+/* --------------Time Section- END-------------------- */
+
 
 /*=========== Footer CSS ===========*/
 
@@ -1078,4 +1091,5 @@ h1, h2, h3, h4, h5, h6 {
 
 #main-content {
   display: none;
+  
 }
