--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -10,14 +10,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Great+Vibes&family=Offside&family=Open+Sans:wght@300;400;500;600;700;800&family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto+Mono:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Baloo+Paaji|Open+Sans:300,300i,400,400i,600,600i,700,700i");
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+
+
+
+
+h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
-  font-family: "Baloo Paaji", cursive;
+  font-family: 'Baloo Paaji', cursive;
 }
 
 p {
@@ -25,13 +24,17 @@ p {
   font-weight: 400;
   opacity: 1;
   color: #333333;
-  letter-spacing: 0.6px;
+  letter-spacing: .6px;
+
+
 }
 /* Ripple Effect */
 body {
-  background: #ffffff;
+  background: #FFFFFF;
   margin: 0;
-  transition: 0.25s ease-in-out;
+  transition: .25s ease-in-out;
+  /* background-color: var(--bg); */
+
 }
 /*Ripple*/
 .ripple {
@@ -58,6 +61,8 @@ body {
   }
 }
 /* Ripple Effect END-----------------*/
+
+
 
 /* Replesment CSS  */
 img {
@@ -205,18 +210,20 @@ img {
   cursor: pointer;
   padding: 15px;
   border-radius: 100%;
-  box-shadow: 0px 0px 17px 10px rgb(180, 178, 178);
+  box-shadow: 0px 0px 17px 10px rgb(180, 178, 178) ;
   /* border: 1px solid rgba(143, 144, 145, 0.837); */
   /* transition: all 0.3s ease; */
 }
-#myBtn .ti-angle-double-up {
+#myBtn .ti-angle-double-up{
   color: rgb(0, 0, 0);
   background-color: transparent;
   font-size: 20px;
   border-radius: 100%;
 }
 
+
 #myBtn:hover {
+
   background-color: #07d6ffda;
   border: 2px solid rgb(255, 255, 255);
   color: rgb(255, 253, 253);
@@ -233,6 +240,8 @@ img {
   font-size: calc(20px + (35 - 20) * ((100vw - 300px) / (1300 - 300)));
 }
 
+
+
 /* blog wrapper */
 .blog-card {
   display: -webkit-box;
@@ -247,6 +256,7 @@ img {
   transition: all 0.3s ease;
 
   /* background-color: #827c7c; */
+
 }
 /* .blog-card:hover{
   box-shadow: 0px 0px 30px -10px rgb(154, 152, 152);
@@ -254,7 +264,7 @@ img {
 } */
 .blog-card:hover {
   background: var(--white-color);
-  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
+  box-shadow: 0 1rem 3rem rgba(0,0,0,.175);
   border-color: transparent;
   transform: translateY(-3px);
 }
@@ -264,6 +274,8 @@ img {
   /* background-color: #111; */
   text-align: center;
   padding-top: 70px;
+
+
 }
 
 .blog-card-img {
@@ -271,7 +283,7 @@ img {
   width: 70%;
   height: 70%;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
 }
 
 .blog-card-body {
@@ -297,7 +309,7 @@ img {
   text-decoration: none;
   display: inline-block;
   font-weight: 600;
-  opacity: 0.7;
+  opacity: .7;
   font-size: 13px;
 }
 
@@ -324,8 +336,8 @@ img {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .blog-card .blog-card-header {
     width: 80%;
@@ -333,6 +345,7 @@ img {
     min-width: 80%;
   }
 }
+
 
 /* testimonial card */
 .testimonial-card {
@@ -382,6 +395,13 @@ img {
   font-size: calc(14px + (18 - 14) * ((100vw - 300px) / (1300 - 300)));
 }
 
+/* -------------------Time Section------------ */
+
+.time-section {
+  text-align: right;
+  padding: 20px 30px 0px 0px;
+}
+
 /*=========== Footer CSS ===========*/
 
 .footer-section {
@@ -409,7 +429,7 @@ img {
 }
 
 .footer-section span {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   line-height: 1.6;
   color: #6e6e6e;
@@ -445,8 +465,258 @@ img {
   margin-left: auto; /* Push the icons to the right */
 }
 
+
+
 .footer-section .socail-icon a:last-child {
   margin-right: 0;
 }
 
+
+
+
 /* ----------------------------------------------------------- */
+
+/* <!------------- Review Of my Blog -----------------------> */
+
+:root {
+  --bg: hsl(223, 10%, 90%);
+  --fg: hsl(223, 10%, 10%);
+  --primary: hsl(223, 90%, 55%);
+  --yellow: hsl(38, 90%, 55%);
+  --yellow-t: hsla(38, 90%, 55%, 0);
+  --bezier: cubic-bezier(0.42, 0, 0.58, 1);
+  --trans-dur: 0.3s;
+}
+
+
+
+.rating {
+  margin: auto;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 100px;
+
+}
+.rating .section-subtitle{
+  margin-left: 20px;
+}
+
+.rating__display {
+  font-size: 1em;
+  font-weight: 500;
+  min-height: 1.25em;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  text-align: center;
+
+}
+
+.rating__stars {
+  display: flex;
+  padding-bottom: 0.375em;
+  position: relative;
+}
+
+.rating__star {
+  display: block;
+  overflow: visible;
+  pointer-events: none;
+  width: 4em;
+  height: 4em;
+}
+
+.rating__star-ring,
+.rating__star-fill,
+.rating__star-line,
+.rating__star-stroke {
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+.rating__star-ring,
+.rating__star-fill,
+.rating__star-line {
+  stroke: var(--yellow);
+}
+
+.rating__star-fill {
+  fill: var(--yellow);
+  transform: scale(0);
+  transition: fill var(--trans-dur) var(--bezier), transform var(--trans-dur) var(--bezier);
+}
+
+.rating__star-stroke {
+  stroke: hsl(223, 10%, 80%);
+  transition: stroke var(--trans-dur);
+}
+
+.rating__label {
+  cursor: pointer;
+  padding: 0.125em;
+}
+
+@for $s from 1 through 4 {
+  .rating__label--delay#{$s} .rating__star-ring,
+  .rating__label--delay#{$s} .rating__star-fill,
+  .rating__label--delay#{$s} .rating__star-line,
+  .rating__label--delay#{$s} .rating__star-stroke {
+    animation-delay: 0.05s * $s;
+  }
+}
+
+.rating__input {
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.rating__input:hover ~ [data-rating]:not([hidden]) {
+  display: none;
+}
+
+.rating__input-1:hover ~ [data-rating="1"][hidden],
+.rating__input-2:hover ~ [data-rating="2"][hidden],
+.rating__input-3:hover ~ [data-rating="3"][hidden],
+.rating__input-4:hover ~ [data-rating="4"][hidden],
+.rating__input-5:hover ~ [data-rating="5"][hidden],
+.rating__input:checked:hover ~ [data-rating]:not([hidden]) {
+  display: block;
+}
+
+.rating__input-1:hover ~ .rating__label:first-of-type .rating__star-stroke,
+.rating__input-2:hover ~ .rating__label:nth-of-type(-n + 2) .rating__star-stroke,
+.rating__input-3:hover ~ .rating__label:nth-of-type(-n + 3) .rating__star-stroke,
+.rating__input-4:hover ~ .rating__label:nth-of-type(-n + 4) .rating__star-stroke,
+.rating__input-5:hover ~ .rating__label:nth-of-type(-n + 5) .rating__star-stroke {
+  stroke: var(--yellow);
+  transform: scale(1);
+}
+
+.rating__input-1:checked ~ .rating__label:first-of-type .rating__star-ring,
+.rating__input-2:checked ~ .rating__label:nth-of-type(-n + 2) .rating__star-ring,
+.rating__input-3:checked ~ .rating__label:nth-of-type(-n + 3) .rating__star-ring,
+.rating__input-4:checked ~ .rating__label:nth-of-type(-n + 4) .rating__star-ring,
+.rating__input-5:checked ~ .rating__label:nth-of-type(-n + 5) .rating__star-ring {
+  animation-name: starRing;
+}
+
+.rating__input-1:checked ~ .rating__label:first-of-type .rating__star-stroke,
+.rating__input-2:checked ~ .rating__label:nth-of-type(-n + 2) .rating__star-stroke,
+.rating__input-3:checked ~ .rating__label:nth-of-type(-n + 3) .rating__star-stroke,
+.rating__input-4:checked ~ .rating__label:nth-of-type(-n + 4) .rating__star-stroke,
+.rating__input-5:checked ~ .rating__label:nth-of-type(-n + 5) .rating__star-stroke {
+  animation-name: starStroke;
+}
+
+.rating__input-1:checked ~ .rating__label:first-of-type .rating__star-line,
+.rating__input-2:checked ~ .rating__label:nth-of-type(-n + 2) .rating__star-line,
+.rating__input-3:checked ~ .rating__label:nth-of-type(-n + 3) .rating__star-line,
+.rating__input-4:checked ~ .rating__label:nth-of-type(-n + 4) .rating__star-line,
+.rating__input-5:checked ~ .rating__label:nth-of-type(-n + 5) .rating__star-line {
+  animation-name: starLine;
+}
+
+.rating__input-1:checked ~ .rating__label:first-of-type .rating__star-fill,
+.rating__input-2:checked ~ .rating__label:nth-of-type(-n + 2) .rating__star-fill,
+.rating__input-3:checked ~ .rating__label:nth-of-type(-n + 3) .rating__star-fill,
+.rating__input-4:checked ~ .rating__label:nth-of-type(-n + 4) .rating__star-fill,
+.rating__input-5:checked ~ .rating__label:nth-of-type(-n + 5) .rating__star-fill {
+  animation-name: starFill;
+}
+
+.rating__input-1:not(:checked):hover ~ .rating__label:first-of-type .rating__star-fill,
+.rating__input-2:not(:checked):hover ~ .rating__label:nth-of-type(2) .rating__star-fill,
+.rating__input-3:not(:checked):hover ~ .rating__label:nth-of-type(3) .rating__star-fill,
+.rating__input-4:not(:checked):hover ~ .rating__label:nth-of-type(4) .rating__star-fill,
+.rating__input-5:not(:checked):hover ~ .rating__label:nth-of-type(5) .rating__star-fill {
+  fill: var(--yellow-t);
+}
+
+.rating__sr {
+  clip: rect(1px, 1px, 1px, 1px);
+  overflow: hidden;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg: hsl(223, 10%, 10%);
+    --fg: hsl(223, 10%, 90%);
+  }
+
+  .rating__star-stroke {
+    stroke: hsl(223, 10%, 30%);
+  }
+}
+
+@keyframes starRing {
+  from,
+  20% {
+    animation-timing-function: ease-in;
+    opacity: 1;
+    r: 8px;
+    stroke-width: 16px;
+    transform: scale(0);
+  }
+  35% {
+    animation-timing-function: ease-out;
+    opacity: 0.5;
+    r: 8px;
+    stroke-width: 16px;
+    transform: scale(1);
+  }
+  50%,
+  to {
+    opacity: 0;
+    r: 16px;
+    stroke-width: 0;
+    transform: scale(1);
+  }
+}
+
+@keyframes starFill {
+  from,
+  40% {
+    animation-timing-function: ease-out;
+    transform: scale(0);
+  }
+  60% {
+    animation-timing-function: ease-in-out;
+    transform: scale(1.2);
+  }
+  80% {
+    transform: scale(0.9);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
+@keyframes starStroke {
+  from {
+    transform: scale(1);
+  }
+  20%,
+  to {
+    transform: scale(0);
+  }
+}
+@keyframes starLine {
+  from,
+  40% {
+    animation-timing-function: ease-out;
+    stroke-dasharray: 1 23;
+    stroke-dashoffset: 1;
+  }
+  60%,
+  to {
+    stroke-dasharray: 12 12;
+    stroke-dashoffset: -12;
+  }
+}
+/* <!------------- Review Of my Blog END -----------------------> */
+
