--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -843,6 +843,12 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
 }
+.footer-section .socail-icon img{
+  filter: grayscale(80%); 
+}
+.footer-section .socail-icon :hover{
+  filter: grayscale(0%); 
+}
 
 .footer-section .socail-icon a {
   font-size: 16px;
