--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,7 +163,7 @@ h1, h2, h3, h4, h5, h6 {
 .hero-section {
   width: 100%;
   height: 100vh;
-  background-image: url(./../images/Home_background.png);
+  background-image: url(./../images/Home_background.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
