--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,11 +262,11 @@ h1, h2, h3, h4, h5, h6 {
 
 
 /* Hover effect for the scroll-to-top button */
-#myBtn:hover {
+/* #myBtn:hover {
   background-color: #07d6ff55;
   border: 2px solid rgb(255, 255, 255);
   color: black;
-}
+} */
 /* Conctact Butthon */
 .btn{
   color: white;
@@ -274,12 +274,12 @@ h1, h2, h3, h4, h5, h6 {
   border-color: white;
   border-radius: 9px;
 }
-.btn:hover{
+/* .btn:hover{
   background-color: #39bff4;
   border-color: white;
   border-radius: 9px;
   
-}
+} */
 
 .hero-section .contact-btn {
   display: flex;
@@ -306,35 +306,29 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   bottom: 20px;
   right: 30px;
-  z-index: 99;
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: #ffffff;
+  background-color: #1eb8f4;
   color: rgb(0, 0, 0);
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 100%;
-  box-shadow: 0px 0px 17px 10px rgb(180, 178, 178);
+  cursor: pointer; 
+  border-radius: 50%;
+  padding: 15px 10px 10px 10px;
   transition: background-color 0.3s ease;
   transition: transform 0.5s ease;
 }
+#myBtn:hover{ background-color: #2bbef8;}
 
 #myBtn .ti-angle-double-up {
-  color: rgb(0, 0, 0);
+  color: #000000;
   font-size: 20px;
+  background-color: #ffffff;
+  padding: 5px 5px 5px 5px;
+  border-radius: 50%;
   transition: transform 0.3s ease;
 }
 
-#myBtn:hover {
-  background-color: #07d6ffda;
-  border: 2px solid rgb(255, 255, 255);
-  color: rgb(255, 253, 253);
-}
-
-#myBtn:hover .ti-angle-double-up {
-  transform: translateY(-5px);
-}
+ 
 /*--------Home UP SCEOLe SECTION END --------- */
 
 /* ------------Get Resuem Button Animation -------------------- */
@@ -821,13 +815,13 @@ h1, h2, h3, h4, h5, h6 {
 .footer-section img {
   width: 60px;
   height: auto;
-  margin-right: 15px;
+  margin-right: 3px;
 }
 
 .footer-section strong {
   color: #303030;
   font-family: "Offside", sans-serif;
-  font-size: 20px;
+  font-size: 20px; 
 }
 
 .footer-section span {
@@ -844,7 +838,7 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
 }
 .footer-section .socail-icon img{
-  filter: grayscale(80%); 
+  filter: grayscale(100%); 
 }
 .footer-section .socail-icon :hover{
   filter: grayscale(0%); 
@@ -865,7 +859,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .footer-section .socail-icon i {
   display: inline-block;
-  margin-right: 5px;
+  margin-right: 3px;
   transform: translateY(3px);
 }
 
