--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,6 +169,7 @@ h1, h2, h3, h4, h5, h6 {
   background-size: cover;
   box-shadow: 0px 0px 27px -10px rgb(95, 95, 95);
   background-color: #ffffff;
+  overflow: hidden;
 }
 .hero-section img {
   transition: 0.2s ease-in;
@@ -292,8 +293,8 @@ h1, h2, h3, h4, h5, h6 {
   padding: 5px 14px 6px 14px;
 }
 
-.container .d-md-block{
-  margin-top: 100px;
+.container .d-md-block{  
+  margin-top: 50px;
   transition: all 0.3s ease;
 
 }
